refactor: Move -> MoveCommand로 이름 변경